added open graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="application-name" content="Animated Discord Logo">
+    <meta name="twitter:title" content="Animated Discord Logo">
+    <meta name="twitter:description" content="An animated Discord logo code generator for your website.">
+    <meta itemprop="name" content="Animated Discord Logo">
+    <meta itemprop="description" content="An animated Discord logo code generator for your website.">
+    <meta property="og:title" content="Animated Discord Logo">
+    <meta property="og:image" content="https://i.imgur.com/hkQ8Mo6.jpg">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://nntin.github.io/discord-logo/">
+    <meta property="og:description" content="An animated Discord logo code generator for your website.">
     <title>discord-logo</title>
   </head>
   <body>
